# fr-pmx-cmd-router

./: README.md  filter-chain-params.json  meson.build  pw_dump.json
include/application/: application.h
include/osc_service/: osc_service.h
include/processing/: group_channels_midi_processor.h  midi_cc_message_processor_implementations.h  midi_message_processor.h  parameter_update_event.h  parameters.h  port.h  process_group_channels_port.h  process_input_channels_port.h
include/utils/: interpolator.h  midi_routing_table.h  node_registry.h  pipewire_service.h  pod_message_builder.h
src/: application.cpp  main.cpp  osc_service.cpp  parameters.cpp  pipewire_service.cpp
tests/utils/: test_build_set_params_message.cpp  test_midi_routing_table.cpp
